[package]
name = "flatdir"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
normalize-path = "0.2.1"
walkdir = "2.5.0"
anyhow = "1.0.100"
pathdiff = "0.2.3"
slugify = "0.1.0"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
